tests/paczka1/fuzzy1/63998534.err
Error in line 4: y5JCV S914 51,6
Error in line 7: y5JCV A521 65,6
Error in line 15: ct1zZl A521 7,0
Error in line 23: y5JCV S914 50,5
